# micromort

./: .gitignore  README.md  build_db.py  data.json  elm.js  export.py  index.html  pyproject.toml  schema.sql  style.css
micromort/: __init__.py  convert.py  db.py
scrape/: _http.py  animals_global.py  asbestos.py  aviation_general.py  bls_cfoi.py  cancer_lifetime.py  cancers_more.py  cardiac.py  cardiac_events_extra.py  cdc_causes.py  cdc_choking.py  cdc_falls.py  cdc_firearms.py  cdc_hazards.py  cdc_life_table.py  cdc_overdose.py  cdc_weather.py  child_mortality.py  chronic_diseases.py  climbing.py  combat_sports.py  dan_diving.py  diarrheal_global.py  drugs_pharma.py  drugs_specific.py  endurance_sports.py  environmental_extra.py  environmental_more.py  extreme_more.py  extreme_reference.py  first_responders.py  food_specific.py  foodborne.py  global_health.py  hemorrhagic_viruses.py  historical_disasters.py  historical_life_tables.py  hiv_exposure.py  iata.py  infections.py  (+22 more)
scripts/: build.sh  serve.sh
seed/: canonical.py  load.py
src/: Main.elm
tests/: test_convert.py
